fix: rm font-weight shift from sidecar (#1139)

--- a/src/layouts/sidebar-sidecar/components/table-of-contents/table-of-contents.module.css
+++ b/src/layouts/sidebar-sidecar/components/table-of-contents/table-of-contents.module.css
@@ -31,7 +31,6 @@
 .activeTableOfContentsListItem {
 	& a {
 		color: var(--token-color-palette-neutral-700);
-		font-weight: 500;
 	}
 }
 
